<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/Heading1_bold"
            android:layout_marginTop="63dp"
            android:text="@string/enter_number_info"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="450dp"
            android:src="@drawable/ellipse2"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="228dp"
            android:layout_height="228dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/login_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Heading3_semiBold"
            android:layout_marginTop="32dp"
            android:text="@string/enter_number"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_bold"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview" />

        <LinearLayout
            android:id="@+id/linear_phone"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/curved_background">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/india"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:text="+91"/>
            </LinearLayout>




            <EditText
                android:id="@+id/et_number"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:background="@drawable/curved_edittext"
                android:inputType="number"
                android:maxLength="10"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="-8dp"
                android:hint="@string/enter_number_hint"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_verify"
            android:layout_width="138dp"
            android:layout_height="34dp"
            android:layout_marginTop="35dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:elevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_phone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="2dp"
                android:text="@string/number_verifying"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:textSize="19dp"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>