<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_top"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:scaleType="fitXY"
            android:src="@drawable/otpellipsetop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/Heading1_bold"
            android:layout_marginTop="67dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/otp_verify_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="222dp"
            android:layout_height="160dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/otpimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_top" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_main_text"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/otp_verify_text"
            android:textColor="#8cc9d3"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_main" />

        <!--        <com.knearer.nearhud.custom_views.OtpEditText-->
        <!--            android:id="@+id/etAuthOtp"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="33dp"-->
        <!--            android:cursorVisible="false"-->
        <!--            android:digits="1234567890"-->
        <!--            android:inputType="number"-->
        <!--            android:maxLength="6"-->
        <!--            android:textIsSelectable="false"-->
        <!--            android:textSize="20sp"-->
        <!--            app:errorEnabled="true"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_chainStyle="packed"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tv_main_text"-->
        <!--            app:layout_constraintWidth_percent="0.6" />-->

        <com.chaos.view.PinView
            android:id="@+id/editTextCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal"
            app:cursorColor="@color/colorPrimary"
            app:cursorWidth="1dp"
            app:hideLineWhenFilled="false"
            app:itemCount="5"
            app:itemHeight="@dimen/_40sdp"
            app:itemRadius="@dimen/_4sdp"
            app:itemSpacing="@dimen/_4sdp"
            app:itemWidth="@dimen/_40sdp"
            app:lineColor="@color/colorPrimary"
            app:lineWidth="@dimen/_1sdp"
            app:viewType="rectangle"
            android:layout_marginTop="@dimen/_38sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_text"/>


<!--        <EditText-->
<!--            android:id="@+id/editTextCode"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="42dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:digits="0123456789"-->
<!--            android:background="@drawable/curved_edittext"-->
<!--            android:drawablePadding="10dp"-->
<!--            android:fontFamily="@font/poppins_regular"-->
<!--            android:gravity="center"-->
<!--            android:hint="@string/enter_otpp"-->
<!--            android:inputType="number"-->
<!--            android:maxLength="6" />-->

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCode">

            <TextView
                android:id="@+id/tvResendtag"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/not_recive_otp"
                android:textSize="13sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvAuthOtpResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/resend"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:visibility="visible"
                android:id="@+id/tvWaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/wating"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tvAuthOtpCounter"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:textSize="13sp"
                android:text="34"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintBottom_toBottomOf="@+id/tvAuthOtpResend"
                app:layout_constraintEnd_toEndOf="@+id/tvAuthOtpInfo"
                app:layout_constraintTop_toTopOf="@+id/tvAuthOtpResend" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_verify"
            android:layout_width="138dp"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:elevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="2dp"
                android:text="@string/number_verifying"
                android:fontFamily="@font/poppins_bold"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:textSize="19dp"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/otpellipsebottom"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

    <!--                android:text='@{String.format("%02d:%02d",viewModel.timer/60,viewModel.timer%60)}'-->